--- a/user.html
+++ b/user.html
@@ -63,8 +63,8 @@ function val()
 </script>
 <h1><center> Person Details</center></h1>
 <form name="user" onsubmit="event.preventDefault();">
-<center>Enter full name<input type="text" name="fname" >
-<input type="text" name="lname"><br>
+<center>Enter First name<input type="text" name="fname"><br>
+<center>Enter Last name<input type="text" name="lname"><br>
 Enter Address<input type="text" name="address"><br>
 Enter Your Mobile Number<input type="text" name="mobileno"><br>
 Select date of birth<input type="text" dob="dob"><br>
